--- a/packages/client/src/sass/LandingPageNew-style.scss
+++ b/packages/client/src/sass/LandingPageNew-style.scss
@@ -55,13 +55,13 @@ body {
           flex-direction: column;
           top: 0;
           right: 0;
-          z-index: 5;
+          z-index: 5000;
           background-color: black;
           transform: rotate3d(90);
           li {
-            padding: $margin-hamburger-menu;
-            margin: $margin-hamburger-menu/2;
-            top: calc(50vh - (0.75rem + 40px));
+            padding: 0;
+            margin: 0;
+            top: calc(50vh - (0.75rem + 100px));
             position: relative;
             text-align: center;
             width: 100%;
@@ -73,17 +73,20 @@ body {
                 0 41.8px 33.4px rgba(252, 28, 8, 0.086);
             }
           }
-        }
-
-        &.expand-menu {
-          display: flex;
-          visibility: visible;
-          width: calc(100vw * 10 / 9);
-          height: calc(100vh * 10 / 9);
-          li {
-            font-size: clamp(0.75rem, 2vw, 1rem);
+          &.expand-menu {
+            display: flex;
+            visibility: visible;
+            width: calc(100vw);
+            height: calc(100vh);
+            li {
+              font-size: clamp(0.75rem, 2vw, 1rem);
+              padding: $margin-hamburger-menu 0;
+              margin: $margin-hamburger-menu/2 0;
+            }
           }
         }
+
+        
       }
 
       .hamburger-menu {
@@ -91,7 +94,7 @@ body {
         @media screen and(max-width: 500px) {
           visibility: visible;
           display: flex;
-          z-index: 10;
+          z-index: 10000;
         }
         * {
           fill: white;
