small changes in UI

--- a/packages/client/src/variables.scss
+++ b/packages/client/src/variables.scss
@@ -11,8 +11,8 @@ $agency-font: "Agency FB", arial;
 $roboto-font: "Roboto", sans-serif;
 $agency-bold-font: "Agency FB Bold", arial;
 
-$accent: #ff1d00;
-$blue: #0082ff;
+$old-accent: #ff1d00;
+$accent: #0082ff;
 
 $foreground-old: #0f0f0f;
 $background-old: #0a0a0a;
