--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -1,4 +1,4 @@
-@import "../variables.scss";
+@import '../variables.scss';
 
 $margin-hamburger-menu: 20px;
 
@@ -105,6 +105,10 @@ body {
         list-style: none;
         margin: 0 1rem;
         color: $second-text;
+        p {
+          margin: 0 -10px;
+          color: $back-text;
+        }
       }
       .suButton {
         background: $accent;
@@ -118,199 +122,33 @@ body {
 
   .wrapper--main {
     display: flex;
-    .wrapper--main--scrollIndicator {
-      left: 0;
+    .scrollIndicator {
+      left: 50px;
       position: relative;
-      margin-left: 20px;
-      width: 100%;
-      max-width: 200px;
-      min-width: 170px;
-      margin-top: 9.8vh;
-      z-index: 5;
 
-      ul {
-        position: relative;
-        color: white;
-        width: 100%;
-      }
-
-      ul li {
-        list-style: none;
-        display: flex;
-        align-items: center;
-        width: 100%;
-      }
-
-      ul li.active {
-        color: #ff1d00;
-      }
-
-      ul li.active:before {
-        background-color: #ff1d00;
-      }
-
-      // ul li.active:after {
-      //   background: linear-gradient(red,black);
-      // }
-      // ul li {
-      //   display: flex;
-      // }
-
-      // ul:before {
-      //   content: '';
-      //   position: absolute;
-      //   top: 5px;
-      //   bottom: 5px;
-      //   width: 5px;
-      //   background: #2d353c;
-      //   left: 20%;
-      //   margin-left: -2.5px;
-      // }
-
-      @media screen and (max-width: 500px) {
-        max-width: unset;
-        min-width: unset;
-      }
-
-      ul li:before {
-        content: "";
-        counter-increment: step;
-        width: 16px;
-        height: 16px;
-        line-height: 16px;
-        border: 1px solid #5c5c5c;
-        display: inline-block;
-        text-align: center;
-        position: relative;
-        left: -10px;
-        margin: 20px 10px 20px 0;
-        border-radius: 50%;
-        background-color: #5c5c5c;
-        z-index: 2;
-      }
-
-      // ul li:after {
-      //   content : "";
-      //   border: 2px solid red;
-      // }
-      ul li:after {
-        content: "";
-        position: absolute;
-        top: 30px;
-        bottom: 21px;
-        width: 2px;
-        background: #5c5c5c;
-        color: #5c5c5c;
-        border: #5c5c5c;
-        left: -2px;
-        z-index: 1;
-      }
-
-      // ul li:after {
-      //   content: '';
-      //   position: absolute;
-      //   height: 100%;
-      //   height: 1px;
-      //   background:#ddd;
-      //   top: 15px;
-      //   left: -50%;
-      //   z-index: -1;
-      // }
-
-      @media screen and (max-width: 500px) {
-        bottom: 0;
-        position: absolute;
-        width: 100%;
-        margin-left: 0;
-        div {
-          background: #5c5c5c;
-          color: white;
-          width: 100%;
-          text-align: center;
-          font-size: 1.25rem;
-          padding: 0.5rem 0.25rem;
-          margin: 1rem 0;
-        }
-
-        ul {
-          counter-reset: step;
-          width: 100%;
-        }
-
-        ul li {
-          list-style-type: none;
-          float: left;
-          width: 33.33%;
-          position: relative;
-          text-align: center;
-
-          a {
+      margin-top: 6.5vh;
+      .dotWrapper {
+        margin-top: 15px;
+        width: 400px;
+        .dot {
+          width: 30px;
+          height: 30px;
+          border: $gray 2px solid;
+          border-radius: 4px;
+          .checkMark {
+            margin-top: 5.9px;
+            height: 14px;
+          }
+          .invisible {
             display: none;
           }
         }
-
-        ul li:before {
-          width: 30px;
-          height: 30px;
-          line-height: 30px;
-          border: 1px solid #5c5c5c;
-          display: block;
-          text-align: center;
-          margin: 0 auto 10px auto;
-          border-radius: 50%;
-          background-color: #5c5c5c;
-        }
-
-        ul li:after {
-          content: "";
-          position: absolute;
-          width: 100%;
-          height: 1px;
-          background: #5c5c5c;
-          top: 15px;
-          left: -50%;
-          z-index: -1;
-        }
-
-        ul li:first-child:after {
-          content: none;
-        }
-      }
-
-      .dotWrapper {
-        margin-right: 15vw;
-        position: relative;
         p {
-          width: 8vw;
-          right: -9vw;
-          position: absolute;
-
-          text-align: start;
+          font-size: 1.2em;
+          margin-left: 5px;
           color: $main-text;
         }
       }
-      // .dot {
-      //   width: 15px;
-      //   height: 15px;
-      //   border-radius: 100%;
-      //   background: $gray;
-      //   margin: -1px 0;
-
-      //   z-index: 1;
-      // }
-      // .line {
-      //   margin-right: 15vw;
-
-      //   width: 3px;
-      //   height: 4vw;
-      //   border-radius: 8px;
-      //   background: $gray;
-
-      //   z-index: 0;
-      // }
-      // // .accent {
-      //   background: #ff1d00;
-      // }
     }
   }
 
