--- a/packages/client/src/App.scss
+++ b/packages/client/src/App.scss
@@ -1,3 +1,5 @@
+@import 'variables.scss';
+
 * {
   margin: 0;
   padding: 0;
@@ -10,6 +12,7 @@
   overflow-y: hidden;
   overflow: hidden;
   z-index: 0;
+  background: $background;
 
   .top-background {
     z-index: 0;
