--- a/packages/client/src/variables.scss
+++ b/packages/client/src/variables.scss
@@ -1,16 +1,16 @@
-@import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 @font-face {
-  src: url("./resources/atari.ttf") format("truetype");
-  font-family: "Atari";
+  src: url('./resources/atari.ttf') format('truetype');
+  font-family: 'Atari';
 }
-$poppins-font: "Poppins", sans-serif;
-$atari-font: "Atari", sans;
-$pixel-font: "VT323", monospace;
-$agency-font: "Agency FB", arial;
-$roboto-font: "Roboto", sans-serif;
-$agency-bold-font: "Agency FB Bold", arial;
+$poppins-font: 'Poppins', sans-serif;
+$atari-font: 'Atari', sans;
+$pixel-font: 'VT323', monospace;
+$agency-font: 'Agency FB', arial;
+$roboto-font: 'Roboto', sans-serif;
+$agency-bold-font: 'Agency FB Bold', arial;
 
 $old-accent: #ff1d00;
 $accent: #0082ff;
@@ -54,4 +54,12 @@ $speech-bubble-background: #313131;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.logo {
+  position: relative;
+  width: 180px;
+
+  top: 10px;
+  left: 10px;
 }
