--- a/packages/client/src/sass/SignInPage-style.scss
+++ b/packages/client/src/sass/SignInPage-style.scss
@@ -1,8 +1,13 @@
 @import '../variables.scss';
 
-.wrapper {
+.si-wrapper {
   height: 100vh;
   justify-content: center;
+  .logoWrapper {
+    position: absolute;
+    top: 12.1px;
+    left: 0px;
+  }
   h1 {
     font-size: 5em;
     margin-bottom: 2vh;
@@ -17,8 +22,13 @@
     margin-top: 2vh;
     align-items: flex-start;
   }
-  .buttonWrapper {
-    width: 22vw;
-    margin-top: 2vh;
+  .divider {
+    height: 22px;
+  }
+  .errorMessage {
+    color: $old-accent;
+    font-size: 1em;
+    font-weight: 500;
+    margin: 20px 0;
   }
 }
