--- a/packages/client/src/sass/elements/SecondElement-style.scss
+++ b/packages/client/src/sass/elements/SecondElement-style.scss
@@ -1,8 +1,7 @@
-@import "../../variables.scss";
+@import '../../variables.scss';
 
 .seWrapper {
-  right: 0;
-  position: absolute;
+  margin-top: 2vh;
   width: 75vw;
 
   article {
