--- a/packages/client/src/sass/elements/ThirdElement-style.scss
+++ b/packages/client/src/sass/elements/ThirdElement-style.scss
@@ -9,8 +9,7 @@
       width: 90%;
       max-width: 1400px;
 
-      padding: 20px;
-      padding-top: 0;
+      padding: 0 20px 20px;
       margin-bottom: 20px;
 
       background: $dark-gray;
@@ -27,7 +26,7 @@
         .addendum {
           color: $accent;
           font-size: 0.3em;
-          margin-bottom: 0.5em;
+          margin-bottom: 1.6em;
           margin-left: 1.5em;
         }
       }
@@ -60,12 +59,34 @@
           font-size: 0.8em;
         }
       }
+      @media screen and (max-width: 1320px) {
+        padding: 0 0 5px;
+      }
+      @media screen and (max-width: 545px) {
+        h1 {
+          font-size: 1.9em;
+          span {
+            color: $accent;
+            font-size: 1em;
+          }
+        }
+        p {
+          font-size: 0.8em;
+        }
+      }
     }
     .c1 {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
       h1 {
-        @media screen and (max-width: 1590px) {
-          display: flex;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-end;
+
+        @media screen and (max-width: 1320px) {
           flex-direction: column;
+          justify-content: flex-start;
         }
       }
     }
@@ -77,15 +98,17 @@
       flex-direction: column;
       .wideCard {
         background: transparent;
-        border-bottom: 5px solid $dark-gray;
-        border-top: 5px solid $dark-gray;
+        border-bottom: 3px solid $gray;
+        // border-top: 5px solid $dark-gray;
         border-radius: 0;
 
-        margin: 20px 0;
         .title {
           margin-right: 15vw;
         }
       }
     }
+  }
+  @media screen and (max-width: 1320px) {
+    width: 95vw;
   }
 }
