fix hamburger menu and show the menu

--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -109,7 +109,7 @@ $margin-hamburger-menu: 20px;
           }
         }
 
-        li {
+        & > li {
           display: none;
         }
       }
