--- a/packages/client/src/sass/RegisterPage-style.scss
+++ b/packages/client/src/sass/RegisterPage-style.scss
@@ -13,6 +13,12 @@
     position: absolute;
     top: 12.1px;
     left: 0px;
+   @media screen and (max-width: 425px) {
+    .logo {
+      left: 0 !important;
+    }
+   }
+  
   }
   .description-s {
     font-weight: 400;
