--- a/packages/client/src/sass/SignInPage-style.scss
+++ b/packages/client/src/sass/SignInPage-style.scss
@@ -7,6 +7,11 @@
     position: absolute;
     top: 12.1px;
     left: 0px;
+    @media screen and (max-width: 425px) {
+      .logo {
+        left: 0 !important;
+      }
+    }
   }
   h1 {
     font-size: 5em;
