--- a/packages/client/src/sass/SignInPage-style.scss
+++ b/packages/client/src/sass/SignInPage-style.scss
@@ -3,15 +3,30 @@
 .si-wrapper {
   height: 100vh;
   justify-content: center;
+
+  
   .logoWrapper {
     position: absolute;
     top: 12.1px;
     left: 0px;
-    @media screen and (max-width: 425px) {
+    
+  }
+
+  @media screen and (max-width: 425px) { 
+    .logoWrapper {
+      position: absolute;
+      top: 12.1px;
+      left: 0px;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      
       .logo {
         left: 0 !important;
       }
+      
     }
+    
   }
   h1 {
     font-size: 5em;
