--- a/packages/client/src/sass/RegisterPage-style.scss
+++ b/packages/client/src/sass/RegisterPage-style.scss
@@ -13,12 +13,21 @@
     position: absolute;
     top: 12.1px;
     left: 0px;
-   @media screen and (max-width: 425px) {
-    .logo {
-      left: 0 !important;
+  }
+
+  @media screen and (max-width: 425px) { 
+    .logoWrapper {
+      position: absolute;
+      top: 12.1px;
+      left: 0px;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+
+      .logo {
+        left: 0 !important;
+      }
     }
-   }
-  
   }
   .description-s {
     font-weight: 400;
