fix font size when mobile on register and sign in page

--- a/packages/client/src/sass/RegisterPage-style.scss
+++ b/packages/client/src/sass/RegisterPage-style.scss
@@ -28,6 +28,10 @@
         left: 0 !important;
       }
     }
+
+    h1 { 
+      font-size:3em;
+    }
   }
   .description-s {
     font-weight: 400;
