--- a/packages/client/src/sass/SignInPage-style.scss
+++ b/packages/client/src/sass/SignInPage-style.scss
@@ -25,8 +25,12 @@
         left: 0 !important;
       }
     }
+
+    h1 { 
+      font-size:3em !important;
+    }
   }
-  
+
   h1 {
     font-size: 5em;
     margin-bottom: 1vh;
