--- a/packages/client/src/sass/SignInPage-style.scss
+++ b/packages/client/src/sass/SignInPage-style.scss
@@ -29,6 +29,11 @@
     h1 { 
       font-size:3em !important;
     }
+
+    form {
+      margin: 2vh 1rem;
+      align-items: flex-start;
+    }
   }
 
   h1 {
