--- a/packages/client/src/sass/SignInPage-style.scss
+++ b/packages/client/src/sass/SignInPage-style.scss
@@ -31,8 +31,18 @@
     }
 
     form {
-      margin: 2vh 1rem;
+      margin: 2vh 0.25rem;
       align-items: flex-start;
+      width: 100%;
+
+      main {
+        margin: 0 1rem;
+        width: calc(100% - 2rem);
+
+        button {
+          width: 100%;
+        }
+      }
 
       input.input {
         width: 100% !important;
