--- a/packages/client/src/sass/SignInPage-style.scss
+++ b/packages/client/src/sass/SignInPage-style.scss
@@ -42,6 +42,10 @@
         button {
           width: 100%;
         }
+
+        div.big {
+          width: 100%;
+        }
       }
 
       input.input {
