--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -42,6 +42,7 @@ $margin-hamburger-menu: 20px;
       .default-menu {
         display: flex;
         visibility: visible;
+
         @media screen and (max-width: 1024px) {
           transition: all 0.5s ease;
           visibility: hidden;
@@ -60,6 +61,7 @@ $margin-hamburger-menu: 20px;
             top: calc(50vh - (0.75rem + 100px));
             position: relative;
             text-align: center;
+            display: unset !important;
             width: 100%;
             font-size: 0;
             &:hover {
@@ -82,6 +84,10 @@ $margin-hamburger-menu: 20px;
               margin: $margin-hamburger-menu/2 0;
             }
           }
+        }
+
+        & > li:nth-child(3), & > li:nth-child(4) {
+          display: none;
         }
       }
 
