--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -75,6 +75,7 @@ $margin-hamburger-menu: 20px;
           }
           &.expand-menu {
             display: flex;
+            position: fixed;
             visibility: visible;
             width: calc(100vw);
             height: calc(100vh);
