layout: 🧱 added bottom padding

--- a/packages/client/src/sass/elements/ThirdElement-style.scss
+++ b/packages/client/src/sass/elements/ThirdElement-style.scss
@@ -3,6 +3,7 @@
 .teWrapper {
   margin-top: 6vh;
   width: 75vw;
+  padding-bottom: 100px;
   .cardsWrapper {
     padding-top: 2vh;
     .wideCard {
