--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -87,7 +87,8 @@ $margin-hamburger-menu: 20px;
           }
         }
 
-        & > li:nth-child(3), & > li:nth-child(4) {
+        & > li:nth-child(3),
+        & > li:nth-child(4) {
           display: none;
         }
       }
@@ -131,6 +132,17 @@ $margin-hamburger-menu: 20px;
     margin-right: 15vw;
     @media screen and (max-width: 1285px) {
       margin-right: 0;
+    }
+  }
+  footer {
+    width: 100%;
+    height: 100px;
+    position: absolute;
+
+    background: $dark-gray;
+    justify-content: center;
+    p {
+      font-weight: 400;
     }
   }
 }
