--- a/packages/client/src/sass/SettingsPageElements/Payout-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Payout-style.scss
@@ -12,7 +12,7 @@ p {
   display: inherit;
 }
 
-.accountWrapper {
+.payoutWrapper {
   width: 82.5vw;
   align-items: center;
   justify-content: center;
