--- a/packages/client/src/sass/SettingsPageElements/Referrals-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Referrals-style.scss
@@ -1,13 +1,120 @@
 @import '../../variables.scss';
 
-p {
-  font-size: 8em;
+.referralWrapper {
+  justify-content: center;
+  align-items: center;
+  width: 82.5vw;
   color: $main-text;
+
+  p {
+    font-size: 1.38em;
+  }
+
+  .container {
+    width: 50%;
+    margin: 10px;
+
+    @media (max-width: 768px) {
+      width: 100%;
+      padding: .7em;
+    }
+  }
+
+  .referralCode {
+    div {
+      display: inline-flex;
+      align-items: center;
+      background-color: $dark-gray;
+      border-radius: 2px;
+      padding: 0.75em;
+    }
+
+    h2 {
+      font-size: 1.375em;
+      font-family: $poppins-font;
+      font-weight: 600;
+      padding-bottom: 10px;
+    }
+
+    .divider {
+      display: inline-block;
+      border-left: 3px solid $accent;
+      margin: 0 15px 0 30px;
+      height: 35px;
+    }
+
+    .code {
+      font-size: 1.5em;
+      font-family: $roboto-font;
+    }
+  }
+
+  .bonuses {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+
+    h2 {
+      font-size: 1.35em;
+      font-family: $poppins-font;
+      font-weight: 600;
+    }
+
+    .card {
+      font-family: $roboto-font;
+      display: flex;
+      flex-direction: column;
+      padding: 15px;
+      border-radius: 2px;
+      background-color: $dark-gray;
+
+      &:not(:last-child) {
+        margin-bottom: 25px;
+      }
+
+      .title {
+        font-weight: 500;
+        font-size: 1.125em;
+        position: relative;
+        padding-bottom: 20px;
+
+        &::after {
+          background-color: #0082ff;
+          content: '';
+          display: block;
+          height: .125em;
+          width: 1.875em;
+          position: absolute;
+          bottom: .312em;
+          border-radius: 1px;
+        }
+      }
+
+      .body {
+        font-size: 0.9em;
+        padding-bottom: 20px;
+        color: $gray;
+      }
+
+      footer {
+        font-weight: 500;
+        font-size: 0.75em;
+
+        .highlight {
+          color: $accent;
+        }
+
+        Button {
+          margin: 10px 0;
+        }
+      }
+    }
+  }
 }
 
 .hide {
   display: none;
 }
 .show {
-  display: inherit;
+  display: flex;
 }
