add-variable: 🍐 green

--- a/packages/client/src/variables.scss
+++ b/packages/client/src/variables.scss
@@ -14,6 +14,7 @@ $agency-bold-font: 'Agency FB Bold', arial;
 
 $old-accent: #ff1d00;
 $accent: #0082ff;
+$green: #24ff00;
 
 $foreground: #0f0f0f;
 $background: #1b1b1b;
