--- a/packages/client/src/sass/SettingsPageElements/Referrals-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Referrals-style.scss
@@ -4,23 +4,25 @@
   justify-content: center;
   align-items: center;
   width: 82.5vw;
+  margin-left: 17.5%;
   color: $main-text;
 
   p {
-    font-size: 1.38em;
+    font-size: 1.6em;
   }
 
   .container {
-    width: 50%;
-    margin: 10px;
+    width: 40%;
+    margin: 60px 0;
 
     @media (max-width: 768px) {
       width: 100%;
-      padding: .7em;
+      padding: 0.7em;
     }
   }
 
   .referralCode {
+    margin-bottom: 60px;
     div {
       display: inline-flex;
       align-items: center;
@@ -30,10 +32,10 @@
     }
 
     h2 {
-      font-size: 1.375em;
+      font-size: 1.8em;
       font-family: $poppins-font;
       font-weight: 600;
-      padding-bottom: 10px;
+      margin-bottom: 15px;
     }
 
     .divider {
@@ -55,18 +57,20 @@
     margin-top: 20px;
 
     h2 {
-      font-size: 1.35em;
+      font-size: 1.8em;
       font-family: $poppins-font;
       font-weight: 600;
+      margin-bottom: 15px;
     }
 
     .card {
       font-family: $roboto-font;
       display: flex;
       flex-direction: column;
-      padding: 15px;
+      padding: 20px;
       border-radius: 2px;
       background-color: $dark-gray;
+      border-radius: 6px;
 
       &:not(:last-child) {
         margin-bottom: 25px;
@@ -74,24 +78,31 @@
 
       .title {
         font-weight: 500;
-        font-size: 1.125em;
+        font-size: 1.6em;
         position: relative;
         padding-bottom: 20px;
+        img {
+          height: 0.86em;
+        }
+        span {
+          color: $green;
+        }
 
         &::after {
           background-color: #0082ff;
           content: '';
           display: block;
-          height: .125em;
+          height: 0.125em;
           width: 1.875em;
           position: absolute;
-          bottom: .312em;
+          bottom: 0.312em;
           border-radius: 1px;
         }
       }
 
       .body {
-        font-size: 0.9em;
+        font-size: 1em;
+        width: 90%;
         padding-bottom: 20px;
         color: $gray;
       }
