--- a/packages/client/src/sass/SettingsPageElements/Payout-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Payout-style.scss
@@ -23,6 +23,15 @@ p {
       height: 50px;
       width: 50px;
       right: -75px;
+      &:checked {
+        content: '\2713';
+        display: block;
+        text-align: center;
+        color: #41B883;
+        position: absolute;
+        left: 0.7rem;
+        top: 0.2rem;
+      }
     }
   }
 
