--- a/packages/client/src/sass/SettingsPageElements/Payout-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Payout-style.scss
@@ -19,28 +19,60 @@ p {
   .flexRow {
     position: relative;
     .payloadCheckboxContainer {
+      display: block;
+      position: relative;
+      padding-left: 35px;
+      margin-bottom: 12px;
+      cursor: pointer;
+      font-size: 22px;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      
+      &:hover input ~ .payloadCheckmark {
+        background-color: #ccc;
+      }
+
       input.inputCheckboxPayout {
         position: absolute;
-        height: 50px;
-        width: 50px;
-        right: -75px;
+        opacity: 0;
+        cursor: pointer;
+        height: 0;
+        width: 0;
+        
+        &:checked ~ .payloadCheckmark{
+          background-color: #121212;
+          &:after {
+            display: block;
+          }
+        }
       }
+      
   
       .payloadCheckmark {
-        content: "";
         position: absolute;
-        display: none;
-        left: 9px;
-        top: 5px;
-        width: 5px;
-        height: 10px;
-        border: solid white;
-        border-width: 0 3px 3px 0;
-        -webkit-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-        transform: rotate(45deg);
+        top: 0;
+        left: 0;
+        height: 25px;
+        width: 25px;
+        background-color: #eee;
+        
+        &:after {
+          content: "";
+          position: absolute;
+          display: none;
+          left: 9px;
+          top: 5px;
+          width: 5px;
+          height: 10px;
+          border: solid white;
+          border-width: 0 3px 3px 0;
+          -webkit-transform: rotate(45deg);
+          -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+        }
       }
     }
   }
-
 }
