--- a/packages/client/src/sass/SettingsPageElements/Payout-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Payout-style.scss
@@ -66,7 +66,7 @@ p {
           top: 5px;
           width: 5px;
           height: 10px;
-          border: solid white;
+          border: solid #0082FF;
           border-width: 0 3px 3px 0;
           -webkit-transform: rotate(45deg);
           -ms-transform: rotate(45deg);
