--- a/packages/client/src/sass/SettingsPageElements/Payout-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Payout-style.scss
@@ -52,10 +52,10 @@ p {
   
       .payloadCheckmark {
         position: absolute;
-        top: 0;
-        left: 0;
-        height: 25px;
-        width: 25px;
+        top: 20px;
+        left: 20px;
+        height: 30px;
+        width: 30px;
         background-color: #eee;
         
         &:after {
