--- a/packages/client/src/sass/SettingsPageElements/Payout-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Payout-style.scss
@@ -31,7 +31,7 @@ p {
       user-select: none;
       
       &:hover input ~ .payloadCheckmark {
-        background-color: #121212;
+        background-color: #f4f4f4;;
       }
 
       input.inputCheckboxPayout {
