--- a/packages/client/src/sass/SettingsPageElements/Payout-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Payout-style.scss
@@ -23,8 +23,9 @@ p {
     
     &.payoutInformation {
       flex-direction: column;
-      width: 75%;
+      width: 77%;
       align-items: flex-start;
+      margin: 2.5rem 0;
       h4 {
         font-family: Poppins;
         font-style: normal;
