--- a/packages/client/src/sass/SettingsPageElements/Payout-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Payout-style.scss
@@ -45,8 +45,10 @@ p {
         font-weight: normal;
         font-size: 15px;
         line-height: 18px;
-  
         color: #8C8C8C;
+        a {
+          color: #0082FF
+        }
       }
   
     }
