--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -167,7 +167,7 @@
         font-size: 3em;
       }
       p {
-        width: 60%;
+        width: 45%;
         color: $back-text;
         .accentSpan {
           color: $accent;
@@ -180,6 +180,84 @@
     }
     aside {
       width: 30%;
+    }
+  }
+  .complicatedArt {
+    width: 100vw;
+    height: 560px;
+    padding: 0 25.359%;
+
+    background: $background;
+    .textContainer {
+      color: $main-text;
+      h4 {
+        font-weight: 600;
+        color: $accent;
+      }
+      h1 {
+        margin: 10px 0;
+        font-size: 3em;
+      }
+      p {
+        width: 60%;
+        color: $back-text;
+        .accentSpan {
+          color: $accent;
+        }
+        span {
+          font-weight: 500;
+          color: $main-text;
+        }
+      }
+    }
+    img {
+      width: 380px;
+    }
+  }
+  footer {
+    width: 100%;
+    height: 580px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    color: $main-text;
+    .top {
+      align-items: flex-start;
+      justify-content: center;
+      img {
+        width: 9%;
+        margin-bottom: 25px;
+      }
+      p {
+        font-weight: 500;
+        font-size: 1.1em;
+      }
+    }
+    .body {
+      width: 400px;
+      align-items: flex-start;
+      justify-content: space-between;
+      li {
+        list-style: none;
+      }
+      .bold {
+        font-weight: 600;
+      }
+    }
+    aside {
+      p {
+        font-weight: 600;
+        margin-bottom: 8px;
+      }
+      .row {
+        width: 380px;
+        justify-content: space-between;
+        .icons {
+          width: 100px;
+          justify-content: space-between;
+        }
+      }
     }
   }
 }
