--- a/packages/client/src/variables.scss
+++ b/packages/client/src/variables.scss
@@ -47,6 +47,7 @@ $speech-bubble-background: #313131;
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: flex-end;
 }
 
 .flexColumn {
