--- a/packages/client/src/sass/SupportPage-style.scss
+++ b/packages/client/src/sass/SupportPage-style.scss
@@ -53,7 +53,7 @@
 
     .help__center__content {
       display: grid;
-
+      grid-template-columns: 1fr 1fr 1fr;
       .item {
         background-color: #1b1b1b;
       }
