--- a/packages/client/src/sass/SupportPage-style.scss
+++ b/packages/client/src/sass/SupportPage-style.scss
@@ -53,9 +53,13 @@
 
     .help__center__content {
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: repeat(3, 1fr)
+      padding: 0 16.825%;
+      grid-gap: 10%;
       .item {
         background-color: #1b1b1b;
+        height: 200px;
+        justify-self: center;
       }
     }
     margin-top: 80px;
