--- a/packages/client/src/sass/SupportPage-style.scss
+++ b/packages/client/src/sass/SupportPage-style.scss
@@ -49,16 +49,18 @@
     width: 100%;
     .search__area {
       background-color: #1b1b1b;
+      width: 100%;
+      height: 100px;
     }
 
     .help__center__content {
       display: grid;
-      grid-template-columns: repeat(3, 1fr)
+      grid-template-columns: repeat(3, 400px);
       padding: 0 16.825%;
       grid-gap: 10%;
       .item {
         background-color: #1b1b1b;
-        height: 200px;
+        height: 300px;
         justify-self: center;
       }
     }
