--- a/packages/client/src/sass/SupportPage-style.scss
+++ b/packages/client/src/sass/SupportPage-style.scss
@@ -50,18 +50,22 @@
     .search__area {
       background-color: #1b1b1b;
       width: 100%;
-      height: 100px;
+      height: 84px;
+      margin-bottom: 76px;
     }
 
     .help__center__content {
-      display: grid;
-      grid-template-columns: repeat(3, 400px);
-      padding: 0 16.825%;
-      grid-gap: 10%;
+      // width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      // flex-direction: row;
+      // padding: 0 16.825%;
       .item {
+        display: flex;
         background-color: #1b1b1b;
         height: 300px;
         justify-self: center;
+        flex: 0 0 calc(100% / 3);
       }
     }
     margin-top: 80px;
