--- a/packages/client/src/sass/SupportPage-style.scss
+++ b/packages/client/src/sass/SupportPage-style.scss
@@ -52,6 +52,9 @@
       width: 100%;
       height: 84px;
       margin-bottom: 76px;
+      border: 0;
+      border-radius: 6px;
+      padding: 28px 38px;
     }
 
     .help__center__content {
@@ -73,7 +76,7 @@
         margin: $margin_item;
         img {
           width: calc(1920px * 0.0625);
-
+          
         }
       }
     }
