--- a/packages/client/src/sass/SupportPage-style.scss
+++ b/packages/client/src/sass/SupportPage-style.scss
@@ -55,6 +55,9 @@
       border: 0;
       border-radius: 6px;
       padding: 28px 38px;
+      color: #5C5C5C;
+      font-weight: 500;
+      font-size: 24px;
     }
 
     .help__center__content {
