make some change with css styling change the class and add breadcump

--- a/packages/client/src/sass/SupportPage-style.scss
+++ b/packages/client/src/sass/SupportPage-style.scss
@@ -9,7 +9,7 @@
     height: 80px;
     justify-content: space-between;
 
-    .breadcump {
+    .site__section__title {
       color: $main-text;
       width: 380px;
       justify-content: flex-start;
